[package]
name = "progettinocarinocarino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { version = "0.34.1", default-features = true}
vulkano-shaders = "0.34.0"
winit = {default-features = true, version = "0.30.5"}
